move changes and todo to docs for inclusion in generated manual

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,8 +1,1 @@
-0.2.h
-- use gevent if you have it installed (outside of requirements), otherwise use Flask's development server
-
-0.2.g
-- fix 
-
-0.1.a
-- prototype alpha
+See docs/changes.rst
